# copilot-model-provider

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  pyproject.toml  pyrightconfig.json  ruff.toml  ty.toml
.agents/templates/: DESIGN.md  LESSONS.md  PLAN.md  RESEARCH.md  TODO.md
.github/workflows/: pr-gate.yml  release.yml
docs/: design.md
plans/agent-client-gaps/: design.md  plan.md  research.md  todo.md
plans/codex-tool-routing-design/: design.md  plan.md  research.md  todo.md
plans/copilot-model-provider-mvp/: design.md  plan.md  research.md  todo.md
plans/model-metadata-exposure/: design.md  plan.md  research.md  todo.md
plans/protocol-compatibility-completion/: design.md  plan.md  research.md  todo.md
scripts/: config_claude.py  config_codex.py
src/copilot_model_provider/: __init__.py  __main__.py  app.py  cli.py  config.py  logging_config.py  server.py
tests/: __init__.py  conftest.py  harness.py  runtime_support.py  session_persistence_helpers.py
tests/contract_tests/: helpers.py  test_anthropic_messages.py  test_anthropic_models.py  test_compat_scaffolding.py  test_openai_chat_non_streaming.py  test_openai_chat_streaming.py  test_openai_models.py  test_openai_responses.py
tests/e2e/: __init__.py  harness.py
tests/integration_tests/: conftest.py  harness.py  test_anthropic_messages.py  test_chat.py  test_convergence_streaming.py  test_mcp_mount.py  test_models.py  test_models_smoke.py  test_non_streaming_chat.py  test_responses.py  test_responses_streaming.py  test_resume_smoke.py  test_session_resume.py  (+5 more)
(+75 files in other folders)
