[project]
name = "copilot-model-provider"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "github-copilot-sdk>=0.2.0",
    "structlog>=25.5.0",
]

[project.scripts]
copilot-model-provider = "copilot_model_provider.cli:main"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.7",
    "ty>=0.0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/copilot_model_provider"]
